<resources>
    <string name="app_name">First</string>
    <string name="school">swufe</string>
    <string name="btn_label">Login</string>
    <string name="pub_date">IBM</string>
    <string name="btn_label2">My Button</string>
    <string name="teamnamea">Team A</string>
    <string name="zero">0</string>
    <string name="btn3_label">+3 points</string>
    <string name="btn2_label">+2 points</string>
    <string name="btn1_label">+1 points</string>
    <string name="reset_label">reset</string>
</resources>